# twitch_miner

./: .gitignore  .pre-commit-config.yaml  .python-version  pyproject.toml
app/: manage.py  settings.py  views.py
app/actor/: __init__.py  exception.py  twitch.py
app/actor/model/: channel_info.py  twilight_user.py
app/factory/: __init__.py  factory.py
app/model/: base.py  browser_information.py  channel.py  cookie.py
app/repository/: __init__.py
app/repository/twitch/: __init__.py  constant.py  exception.py  twitch.py
app/repository/twitch/response/: __init__.py  base.py  channel_points_context.py  claim_community_points.py  integrity.py  report_menu_item.py  video_player_stream_info_overlay_channel.py
app/service/: __init__.py  exception.py  twitch.py
app/services/: __init__.py
app/services/twitch/: __init__.py  account.py  channel.py  miner.py
app/util/: __init__.py  inflection.py
